Use em-dash instead of a hyphen in user facing strings

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Subtitle Editor
 ===============
 
 Graphical subtitle editor with sound waves representation
-Author: IDJAAD djamel - kitone <kitone at free dot fr>
+Author: IDJAAD djamel — kitone <kitone at free dot fr>
 Homepage: https://github.com/kitone/subtitleeditor/
 
 What is it?
