--- a/po/bg.po
+++ b/po/bg.po
@@ -1883,24 +1883,24 @@ msgid "Autodetect"
 msgstr "Автоматично разпознаване"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:103
-msgid "Pulse - PulseAudio Sound Server"
-msgstr "Pulse - Звуков сървър PulseAudio"
+msgid "Pulse — PulseAudio Sound Server"
+msgstr "Pulse — Звуков сървър PulseAudio"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:106
-msgid "ALSA - Advanced Linux Sound Architecture"
+msgid "ALSA — Advanced Linux Sound Architecture"
 msgstr "ALSA — Съвременна архитектура за звук на Линукс"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:107
-msgid "ESD - Enlightenment Sound Daemon"
+msgid "ESD — Enlightenment Sound Daemon"
 msgstr "ESD — звуков демон Enlightened"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:109
-msgid "OSS - Open Sound System"
+msgid "OSS — Open Sound System"
 msgstr "OSS — Отворена система за звук"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:110
 #: ../plugins/actions/preferences/videoplayerpage.h:127
-msgid "SDL - Simple DirectMedia Layer"
+msgid "SDL — Simple DirectMedia Layer"
 msgstr "SDL — опростен слой за директна медия"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:112
@@ -2311,8 +2311,8 @@ msgid "Stack Subtitles only works on a continuous selection."
 msgstr ""
 
 #: ../plugins/actions/styleeditor/dialog-style-editor.ui.h:1
-msgid "Subtitle Editor - Style Editor"
-msgstr "Редактор на субтитри - Редактор на стилове"
+msgid "Subtitle Editor — Style Editor"
+msgstr "Редактор на субтитри — Редактор на стилове"
 
 #: ../plugins/actions/styleeditor/dialog-style-editor.ui.h:2
 #, fuzzy
@@ -2738,19 +2738,19 @@ msgid "_Typewriter"
 msgstr "_Пишеща машина"
 
 #: ../plugins/actions/typewriter/typewriter.cc:47
-msgid "Characters - Linear"
+msgid "Characters — Linear"
 msgstr ""
 
 #: ../plugins/actions/typewriter/typewriter.cc:54
-msgid "Characters - Random"
+msgid "Characters — Random"
 msgstr ""
 
 #: ../plugins/actions/typewriter/typewriter.cc:60
-msgid "Words - Linear"
+msgid "Words — Linear"
 msgstr ""
 
 #: ../plugins/actions/typewriter/typewriter.cc:66
-msgid "Words - Random"
+msgid "Words — Random"
 msgstr ""
 
 #. Already create in MenuBar.cc
@@ -3332,7 +3332,7 @@ msgstr "Арменски"
 
 #: ../src/encodings.cc:50 ../src/encodings.cc:51 ../src/encodings.cc:56
 msgid "Chinese Traditional"
-msgstr "Китайски - традиционен"
+msgstr "Китайски — традиционен"
 
 #: ../src/encodings.cc:52
 msgid "Cyrillic/Russian"
@@ -3350,7 +3350,7 @@ msgstr "Корейски"
 #: ../src/encodings.cc:58 ../src/encodings.cc:59 ../src/encodings.cc:60
 #: ../src/encodings.cc:62
 msgid "Chinese Simplified"
-msgstr "Китайски - опростен"
+msgstr "Китайски — опростен"
 
 #: ../src/encodings.cc:61
 msgid "Georgian"
@@ -3610,8 +3610,8 @@ msgid "Couldn't get the keyframe size on the file."
 msgstr ""
 
 #: ../src/main.cc:59
-msgid " - edit subtitles files"
-msgstr " - редактиране на файлове със субтитри"
+msgid " — edit subtitles files"
+msgstr " — редактиране на файлове със субтитри"
 
 #: ../src/options.cc:35
 msgid "[FILE...]"
