--- a/po/da.po
+++ b/po/da.po
@@ -1806,24 +1806,24 @@ msgid "Autodetect"
 msgstr ""
 
 #: ../plugins/actions/preferences/videoplayerpage.h:103
-msgid "Pulse - PulseAudio Sound Server"
+msgid "Pulse — PulseAudio Sound Server"
 msgstr ""
 
 #: ../plugins/actions/preferences/videoplayerpage.h:106
-msgid "ALSA - Advanced Linux Sound Architecture"
+msgid "ALSA — Advanced Linux Sound Architecture"
 msgstr ""
 
 #: ../plugins/actions/preferences/videoplayerpage.h:107
-msgid "ESD - Enlightenment Sound Daemon"
+msgid "ESD — Enlightenment Sound Daemon"
 msgstr ""
 
 #: ../plugins/actions/preferences/videoplayerpage.h:109
-msgid "OSS - Open Sound System"
+msgid "OSS — Open Sound System"
 msgstr ""
 
 #: ../plugins/actions/preferences/videoplayerpage.h:110
 #: ../plugins/actions/preferences/videoplayerpage.h:127
-msgid "SDL - Simple DirectMedia Layer"
+msgid "SDL — Simple DirectMedia Layer"
 msgstr ""
 
 #: ../plugins/actions/preferences/videoplayerpage.h:112
@@ -2225,7 +2225,7 @@ msgid "Stack Subtitles only works on a continuous selection."
 msgstr ""
 
 #: ../plugins/actions/styleeditor/dialog-style-editor.ui.h:1
-msgid "Subtitle Editor - Style Editor"
+msgid "Subtitle Editor — Style Editor"
 msgstr ""
 
 #: ../plugins/actions/styleeditor/dialog-style-editor.ui.h:2
@@ -2638,19 +2638,19 @@ msgid "_Typewriter"
 msgstr ""
 
 #: ../plugins/actions/typewriter/typewriter.cc:47
-msgid "Characters - Linear"
+msgid "Characters — Linear"
 msgstr ""
 
 #: ../plugins/actions/typewriter/typewriter.cc:54
-msgid "Characters - Random"
+msgid "Characters — Random"
 msgstr ""
 
 #: ../plugins/actions/typewriter/typewriter.cc:60
-msgid "Words - Linear"
+msgid "Words — Linear"
 msgstr ""
 
 #: ../plugins/actions/typewriter/typewriter.cc:66
-msgid "Words - Random"
+msgid "Words — Random"
 msgstr ""
 
 #. Already create in MenuBar.cc
@@ -3497,7 +3497,7 @@ msgid "Couldn't get the keyframe size on the file."
 msgstr ""
 
 #: ../src/main.cc:59
-msgid " - edit subtitles files"
+msgid " — edit subtitles files"
 msgstr ""
 
 #: ../src/options.cc:35
