--- a/po/de.po
+++ b/po/de.po
@@ -1925,25 +1925,25 @@ msgid "Autodetect"
 msgstr "Auto-Erkennung"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:103
-msgid "Pulse - PulseAudio Sound Server"
-msgstr "Pulse - PulseAudio Sound Server"
+msgid "Pulse — PulseAudio Sound Server"
+msgstr "Pulse — PulseAudio Sound Server"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:106
-msgid "ALSA - Advanced Linux Sound Architecture"
-msgstr "ALSA - Advanced Linux Sound Architecture"
+msgid "ALSA — Advanced Linux Sound Architecture"
+msgstr "ALSA — Advanced Linux Sound Architecture"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:107
-msgid "ESD - Enlightenment Sound Daemon"
-msgstr "ESD - Enlightenment Sound Daemon"
+msgid "ESD — Enlightenment Sound Daemon"
+msgstr "ESD — Enlightenment Sound Daemon"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:109
-msgid "OSS - Open Sound System"
-msgstr "OSS - Open Sound System"
+msgid "OSS — Open Sound System"
+msgstr "OSS — Open Sound System"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:110
 #: ../plugins/actions/preferences/videoplayerpage.h:127
-msgid "SDL - Simple DirectMedia Layer"
-msgstr "SDL - Simple DirectMedia Layer"
+msgid "SDL — Simple DirectMedia Layer"
+msgstr "SDL — Simple DirectMedia Layer"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:112
 #: ../plugins/actions/preferences/videoplayerpage.h:129
@@ -2355,8 +2355,8 @@ msgid "Stack Subtitles only works on a continuous selection."
 msgstr "Nur aufeinanderfolgende Untertitel können gestapelt werden."
 
 #: ../plugins/actions/styleeditor/dialog-style-editor.ui.h:1
-msgid "Subtitle Editor - Style Editor"
-msgstr "Subtitle Editor - Stileditor"
+msgid "Subtitle Editor — Style Editor"
+msgstr "Subtitle Editor — Stileditor"
 
 #: ../plugins/actions/styleeditor/dialog-style-editor.ui.h:2
 msgid "Font"
@@ -2782,20 +2782,20 @@ msgid "_Typewriter"
 msgstr "_Schreibmaschine"
 
 #: ../plugins/actions/typewriter/typewriter.cc:47
-msgid "Characters - Linear"
-msgstr "Buchstaben - Linear"
+msgid "Characters — Linear"
+msgstr "Buchstaben — Linear"
 
 #: ../plugins/actions/typewriter/typewriter.cc:54
-msgid "Characters - Random"
-msgstr "Buchstaben - Zufällig"
+msgid "Characters — Random"
+msgstr "Buchstaben — Zufällig"
 
 #: ../plugins/actions/typewriter/typewriter.cc:60
-msgid "Words - Linear"
-msgstr "Worte - Linear"
+msgid "Words — Linear"
+msgstr "Worte — Linear"
 
 #: ../plugins/actions/typewriter/typewriter.cc:66
-msgid "Words - Random"
-msgstr "Worte - Zufällig"
+msgid "Words — Random"
+msgstr "Worte — Zufällig"
 
 #. Already create in MenuBar.cc
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:45
@@ -3645,8 +3645,8 @@ msgid "Couldn't get the keyframe size on the file."
 msgstr "Konnte die Anzahl der Schlüsselbilder der Datei nicht bestimmen."
 
 #: ../src/main.cc:59
-msgid " - edit subtitles files"
-msgstr " - zum Bearbeiten von Untertiteln"
+msgid " — edit subtitles files"
+msgstr " — zum Bearbeiten von Untertiteln"
 
 #: ../src/options.cc:35
 msgid "[FILE...]"
