--- a/po/es.po
+++ b/po/es.po
@@ -1901,25 +1901,25 @@ msgid "Autodetect"
 msgstr "Autodetectar"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:103
-msgid "Pulse - PulseAudio Sound Server"
-msgstr "Pulse - Servidor de sonido PulseAudio"
+msgid "Pulse — PulseAudio Sound Server"
+msgstr "Pulse — Servidor de sonido PulseAudio"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:106
-msgid "ALSA - Advanced Linux Sound Architecture"
-msgstr "ALSA - Advanced Linux Sound Architecture"
+msgid "ALSA — Advanced Linux Sound Architecture"
+msgstr "ALSA — Advanced Linux Sound Architecture"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:107
-msgid "ESD - Enlightenment Sound Daemon"
-msgstr "ESD - Enlightenment Sound Daemon"
+msgid "ESD — Enlightenment Sound Daemon"
+msgstr "ESD — Enlightenment Sound Daemon"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:109
-msgid "OSS - Open Sound System"
-msgstr "OSS - Open Sound System"
+msgid "OSS — Open Sound System"
+msgstr "OSS — Open Sound System"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:110
 #: ../plugins/actions/preferences/videoplayerpage.h:127
-msgid "SDL - Simple DirectMedia Layer"
-msgstr "SDL - Simple DirectMedia Layer"
+msgid "SDL — Simple DirectMedia Layer"
+msgstr "SDL — Simple DirectMedia Layer"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:112
 #: ../plugins/actions/preferences/videoplayerpage.h:129
@@ -2328,8 +2328,8 @@ msgid "Stack Subtitles only works on a continuous selection."
 msgstr "Acercar Subtítulos sólo funciona en una selección continua."
 
 #: ../plugins/actions/styleeditor/dialog-style-editor.ui.h:1
-msgid "Subtitle Editor - Style Editor"
-msgstr "Editor de Subtítulos - Editor de Estilos"
+msgid "Subtitle Editor — Style Editor"
+msgstr "Editor de Subtítulos — Editor de Estilos"
 
 #: ../plugins/actions/styleeditor/dialog-style-editor.ui.h:2
 msgid "Font"
@@ -2760,20 +2760,20 @@ msgid "_Typewriter"
 msgstr "_Máquina de escribir"
 
 #: ../plugins/actions/typewriter/typewriter.cc:47
-msgid "Characters - Linear"
-msgstr "Caracteres - Linear"
+msgid "Characters — Linear"
+msgstr "Caracteres — Linear"
 
 #: ../plugins/actions/typewriter/typewriter.cc:54
-msgid "Characters - Random"
-msgstr "Caracteres - Aleatorio"
+msgid "Characters — Random"
+msgstr "Caracteres — Aleatorio"
 
 #: ../plugins/actions/typewriter/typewriter.cc:60
-msgid "Words - Linear"
-msgstr "Palabras - Linear"
+msgid "Words — Linear"
+msgstr "Palabras — Linear"
 
 #: ../plugins/actions/typewriter/typewriter.cc:66
-msgid "Words - Random"
-msgstr "Palabras - Aleatorio"
+msgid "Words — Random"
+msgstr "Palabras — Aleatorio"
 
 #. Already create in MenuBar.cc
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:45
@@ -3628,8 +3628,8 @@ msgid "Couldn't get the keyframe size on the file."
 msgstr "No se pudo reconocer los fotogramas del archivo."
 
 #: ../src/main.cc:59
-msgid " - edit subtitles files"
-msgstr " - Editar archivos de subtítulos"
+msgid " — edit subtitles files"
+msgstr " — Editar archivos de subtítulos"
 
 #: ../src/options.cc:35
 msgid "[FILE...]"
