--- a/po/gl.po
+++ b/po/gl.po
@@ -1901,25 +1901,25 @@ msgid "Autodetect"
 msgstr "Detectar automaticamente"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:103
-msgid "Pulse - PulseAudio Sound Server"
-msgstr "Pulse - PulseAudio Sound Server"
+msgid "Pulse — PulseAudio Sound Server"
+msgstr "Pulse — PulseAudio Sound Server"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:106
-msgid "ALSA - Advanced Linux Sound Architecture"
-msgstr "ALSA - Arquitectura avanzada de son para Linux"
+msgid "ALSA — Advanced Linux Sound Architecture"
+msgstr "ALSA — Arquitectura avanzada de son para Linux"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:107
-msgid "ESD - Enlightenment Sound Daemon"
-msgstr "ESD - Enlightenment Sound Daemon"
+msgid "ESD — Enlightenment Sound Daemon"
+msgstr "ESD — Enlightenment Sound Daemon"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:109
-msgid "OSS - Open Sound System"
-msgstr "OSS - Sistema de son aberto"
+msgid "OSS — Open Sound System"
+msgstr "OSS — Sistema de son aberto"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:110
 #: ../plugins/actions/preferences/videoplayerpage.h:127
-msgid "SDL - Simple DirectMedia Layer"
-msgstr "SDL - Simple DirectMedia Layer"
+msgid "SDL — Simple DirectMedia Layer"
+msgstr "SDL — Simple DirectMedia Layer"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:112
 #: ../plugins/actions/preferences/videoplayerpage.h:129
@@ -2330,8 +2330,8 @@ msgid "Stack Subtitles only works on a continuous selection."
 msgstr ""
 
 #: ../plugins/actions/styleeditor/dialog-style-editor.ui.h:1
-msgid "Subtitle Editor - Style Editor"
-msgstr "Editor de subtítulos - Editor de estilo"
+msgid "Subtitle Editor — Style Editor"
+msgstr "Editor de subtítulos — Editor de estilo"
 
 #: ../plugins/actions/styleeditor/dialog-style-editor.ui.h:2
 #, fuzzy
@@ -2766,20 +2766,20 @@ msgid "_Typewriter"
 msgstr "_Máquina de escribir"
 
 #: ../plugins/actions/typewriter/typewriter.cc:47
-msgid "Characters - Linear"
-msgstr "Caracteres - Lineal"
+msgid "Characters — Linear"
+msgstr "Caracteres — Lineal"
 
 #: ../plugins/actions/typewriter/typewriter.cc:54
-msgid "Characters - Random"
-msgstr "Caracteres - Aleatorio"
+msgid "Characters — Random"
+msgstr "Caracteres — Aleatorio"
 
 #: ../plugins/actions/typewriter/typewriter.cc:60
-msgid "Words - Linear"
-msgstr "Palabras - Lineal"
+msgid "Words — Linear"
+msgstr "Palabras — Lineal"
 
 #: ../plugins/actions/typewriter/typewriter.cc:66
-msgid "Words - Random"
-msgstr "Palabras - Aleatorio"
+msgid "Words — Random"
+msgstr "Palabras — Aleatorio"
 
 #. Already create in MenuBar.cc
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:45
@@ -3642,8 +3642,8 @@ msgid "Couldn't get the keyframe size on the file."
 msgstr "Non foi posíbel obter o tamaño do fotograma chave no ficheiro."
 
 #: ../src/main.cc:59
-msgid " - edit subtitles files"
-msgstr " - editar os ficheiros dos subtítulos"
+msgid " — edit subtitles files"
+msgstr " — editar os ficheiros dos subtítulos"
 
 #: ../src/options.cc:35
 msgid "[FILE...]"
