--- a/po/pl.po
+++ b/po/pl.po
@@ -1893,25 +1893,25 @@ msgid "Autodetect"
 msgstr "Automatyczne wykrycie"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:103
-msgid "Pulse - PulseAudio Sound Server"
-msgstr "Pulse - serwer dźwięku PulseAudio"
+msgid "Pulse — PulseAudio Sound Server"
+msgstr "Pulse — serwer dźwięku PulseAudio"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:106
-msgid "ALSA - Advanced Linux Sound Architecture"
-msgstr "ALSA - Advanced Linux Sound Architecture"
+msgid "ALSA — Advanced Linux Sound Architecture"
+msgstr "ALSA — Advanced Linux Sound Architecture"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:107
-msgid "ESD - Enlightenment Sound Daemon"
-msgstr "ESD - Enlightenment Sound Daemon"
+msgid "ESD — Enlightenment Sound Daemon"
+msgstr "ESD — Enlightenment Sound Daemon"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:109
-msgid "OSS - Open Sound System"
-msgstr "OSS - Open Sound System"
+msgid "OSS — Open Sound System"
+msgstr "OSS — Open Sound System"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:110
 #: ../plugins/actions/preferences/videoplayerpage.h:127
-msgid "SDL - Simple DirectMedia Layer"
-msgstr "SDL - Simple DirectMedia Layer"
+msgid "SDL — Simple DirectMedia Layer"
+msgstr "SDL — Simple DirectMedia Layer"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:112
 #: ../plugins/actions/preferences/videoplayerpage.h:129
@@ -2324,8 +2324,8 @@ msgid "Stack Subtitles only works on a continuous selection."
 msgstr ""
 
 #: ../plugins/actions/styleeditor/dialog-style-editor.ui.h:1
-msgid "Subtitle Editor - Style Editor"
-msgstr "Edytor Napisów - Edytor stylów"
+msgid "Subtitle Editor — Style Editor"
+msgstr "Edytor Napisów — Edytor stylów"
 
 #: ../plugins/actions/styleeditor/dialog-style-editor.ui.h:2
 #, fuzzy
@@ -2752,20 +2752,20 @@ msgid "_Typewriter"
 msgstr "_Maszyna do pisania"
 
 #: ../plugins/actions/typewriter/typewriter.cc:47
-msgid "Characters - Linear"
-msgstr "Znaki - liniowo"
+msgid "Characters — Linear"
+msgstr "Znaki — liniowo"
 
 #: ../plugins/actions/typewriter/typewriter.cc:54
-msgid "Characters - Random"
-msgstr "Znaki - losowo"
+msgid "Characters — Random"
+msgstr "Znaki — losowo"
 
 #: ../plugins/actions/typewriter/typewriter.cc:60
-msgid "Words - Linear"
-msgstr "Wyrazy - liniowo"
+msgid "Words — Linear"
+msgstr "Wyrazy — liniowo"
 
 #: ../plugins/actions/typewriter/typewriter.cc:66
-msgid "Words - Random"
-msgstr "Wyrazy - losowo"
+msgid "Words — Random"
+msgstr "Wyrazy — losowo"
 
 #. Already create in MenuBar.cc
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:45
@@ -3620,8 +3620,8 @@ msgid "Couldn't get the keyframe size on the file."
 msgstr "Nie można pobrać wielkości klatki kluczowej z pliku."
 
 #: ../src/main.cc:59
-msgid " - edit subtitles files"
-msgstr " - edytuje pliki z napisami"
+msgid " — edit subtitles files"
+msgstr " — edytuje pliki z napisami"
 
 #: ../src/options.cc:35
 msgid "[FILE...]"
