--- a/po/cs.po
+++ b/po/cs.po
@@ -1874,24 +1874,24 @@ msgid "Autodetect"
 msgstr "Automatická detekce"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:103
-msgid "Pulse - PulseAudio Sound Server"
+msgid "Pulse — PulseAudio Sound Server"
 msgstr "Pulse – PulseAudio"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:106
-msgid "ALSA - Advanced Linux Sound Architecture"
+msgid "ALSA — Advanced Linux Sound Architecture"
 msgstr "ALSA – Advanced Linux Sound Architecture"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:107
-msgid "ESD - Enlightenment Sound Daemon"
+msgid "ESD — Enlightenment Sound Daemon"
 msgstr "ESD – Enlightenment Sound Daemon"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:109
-msgid "OSS - Open Sound System"
+msgid "OSS — Open Sound System"
 msgstr "OSS – Open Sound System"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:110
 #: ../plugins/actions/preferences/videoplayerpage.h:127
-msgid "SDL - Simple DirectMedia Layer"
+msgid "SDL — Simple DirectMedia Layer"
 msgstr "SDL – Simple DirectMedia Layer"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:112
@@ -2305,8 +2305,8 @@ msgid "Stack Subtitles only works on a continuous selection."
 msgstr ""
 
 #: ../plugins/actions/styleeditor/dialog-style-editor.ui.h:1
-msgid "Subtitle Editor - Style Editor"
-msgstr "Titulkový editor - Editor stylů"
+msgid "Subtitle Editor — Style Editor"
+msgstr "Titulkový editor — Editor stylů"
 
 #: ../plugins/actions/styleeditor/dialog-style-editor.ui.h:2
 #, fuzzy
@@ -2733,19 +2733,19 @@ msgid "_Typewriter"
 msgstr "_Psací stroj"
 
 #: ../plugins/actions/typewriter/typewriter.cc:47
-msgid "Characters - Linear"
+msgid "Characters — Linear"
 msgstr "Znaky – lineárně"
 
 #: ../plugins/actions/typewriter/typewriter.cc:54
-msgid "Characters - Random"
+msgid "Characters — Random"
 msgstr "Znaky – náhodně"
 
 #: ../plugins/actions/typewriter/typewriter.cc:60
-msgid "Words - Linear"
+msgid "Words — Linear"
 msgstr "Slova – lineárně"
 
 #: ../plugins/actions/typewriter/typewriter.cc:66
-msgid "Words - Random"
+msgid "Words — Random"
 msgstr "Slova – náhodně"
 
 #. Already create in MenuBar.cc
@@ -3601,7 +3601,7 @@ msgid "Couldn't get the keyframe size on the file."
 msgstr "Nešlo zjistit velikost klíčových snímků v souboru."
 
 #: ../src/main.cc:59
-msgid " - edit subtitles files"
+msgid " — edit subtitles files"
 msgstr " – edituje titulkové soubory"
 
 #: ../src/options.cc:35
