--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1912,25 +1912,25 @@ msgid "Autodetect"
 msgstr "Autodetect"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:103
-msgid "Pulse - PulseAudio Sound Server"
+msgid "Pulse — PulseAudio Sound Server"
 msgstr ""
 
 #: ../plugins/actions/preferences/videoplayerpage.h:106
-msgid "ALSA - Advanced Linux Sound Architecture"
-msgstr "ALSA - Advanced Linux Sound Architecture"
+msgid "ALSA — Advanced Linux Sound Architecture"
+msgstr "ALSA — Advanced Linux Sound Architecture"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:107
-msgid "ESD - Enlightenment Sound Daemon"
-msgstr "ESD - Enlightenment Sound Daemon"
+msgid "ESD — Enlightenment Sound Daemon"
+msgstr "ESD — Enlightenment Sound Daemon"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:109
-msgid "OSS - Open Sound System"
-msgstr "OSS - Open Sound System"
+msgid "OSS — Open Sound System"
+msgstr "OSS — Open Sound System"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:110
 #: ../plugins/actions/preferences/videoplayerpage.h:127
-msgid "SDL - Simple DirectMedia Layer"
-msgstr "SDL - Simple DirectMedia Layer"
+msgid "SDL — Simple DirectMedia Layer"
+msgstr "SDL — Simple DirectMedia Layer"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:112
 #: ../plugins/actions/preferences/videoplayerpage.h:129
@@ -2346,8 +2346,8 @@ msgid "Stack Subtitles only works on a continuous selection."
 msgstr ""
 
 #: ../plugins/actions/styleeditor/dialog-style-editor.ui.h:1
-msgid "Subtitle Editor - Style Editor"
-msgstr "Subtitle Editor - Style Editor"
+msgid "Subtitle Editor — Style Editor"
+msgstr "Subtitle Editor — Style Editor"
 
 #: ../plugins/actions/styleeditor/dialog-style-editor.ui.h:2
 #, fuzzy
@@ -2774,20 +2774,20 @@ msgstr ""
 
 #: ../plugins/actions/typewriter/typewriter.cc:47
 #, fuzzy
-msgid "Characters - Linear"
+msgid "Characters — Linear"
 msgstr "Character Codings"
 
 #: ../plugins/actions/typewriter/typewriter.cc:54
 #, fuzzy
-msgid "Characters - Random"
+msgid "Characters — Random"
 msgstr "Character Codings"
 
 #: ../plugins/actions/typewriter/typewriter.cc:60
-msgid "Words - Linear"
+msgid "Words — Linear"
 msgstr ""
 
 #: ../plugins/actions/typewriter/typewriter.cc:66
-msgid "Words - Random"
+msgid "Words — Random"
 msgstr ""
 
 #. Already create in MenuBar.cc
@@ -3672,8 +3672,8 @@ msgid "Couldn't get the keyframe size on the file."
 msgstr ""
 
 #: ../src/main.cc:59
-msgid " - edit subtitles files"
-msgstr " - edit subtitles files"
+msgid " — edit subtitles files"
+msgstr " — edit subtitles files"
 
 #: ../src/options.cc:35
 msgid "[FILE...]"
@@ -4097,7 +4097,7 @@ msgstr "Adjust time"
 #: ../plugins/actions/adjusttime/adjusttime.se-plugin.in.h:2
 #, fuzzy
 msgid "Adjusts subtitle times."
-msgstr " - edit subtitles files"
+msgstr " — edit subtitles files"
 
 #: ../plugins/actions/applytranslation/applytranslation.se-plugin.in.h:1
 #, fuzzy
@@ -4595,7 +4595,7 @@ msgstr "Subtitle Editor"
 #: ../plugins/subtitleformats/subtitleeditorproject/subtitleeditorproject.se-plugin.in.h:2
 #, fuzzy
 msgid "Subtitle Editor Project subtitles support."
-msgstr "Subtitle Editor - Style Editor"
+msgstr "Subtitle Editor — Style Editor"
 
 #: ../plugins/subtitleformats/subviewer2/subviewer2.se-plugin.in.h:1
 msgid "SubViewer2"
