--- a/po/eu.po
+++ b/po/eu.po
@@ -1854,25 +1854,25 @@ msgid "Autodetect"
 msgstr "Atzeman automatikoki"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:103
-msgid "Pulse - PulseAudio Sound Server"
-msgstr "Pulse - PulseAudio Sound Server"
+msgid "Pulse — PulseAudio Sound Server"
+msgstr "Pulse — PulseAudio Sound Server"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:106
-msgid "ALSA - Advanced Linux Sound Architecture"
-msgstr "ALSA - Advanced Linux Sound Architecture"
+msgid "ALSA — Advanced Linux Sound Architecture"
+msgstr "ALSA — Advanced Linux Sound Architecture"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:107
-msgid "ESD - Enlightenment Sound Daemon"
-msgstr "ESD - Enlightenment Sound Daemon"
+msgid "ESD — Enlightenment Sound Daemon"
+msgstr "ESD — Enlightenment Sound Daemon"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:109
-msgid "OSS - Open Sound System"
-msgstr "OSS - Open Sound System"
+msgid "OSS — Open Sound System"
+msgstr "OSS — Open Sound System"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:110
 #: ../plugins/actions/preferences/videoplayerpage.h:127
-msgid "SDL - Simple DirectMedia Layer"
-msgstr "SDL - Simple DirectMedia Layer"
+msgid "SDL — Simple DirectMedia Layer"
+msgstr "SDL — Simple DirectMedia Layer"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:112
 #: ../plugins/actions/preferences/videoplayerpage.h:129
@@ -2280,8 +2280,8 @@ msgid "Stack Subtitles only works on a continuous selection."
 msgstr "Azpitituluen pilaketa bakarrik funtzionatzen du hautaketa jarraian."
 
 #: ../plugins/actions/styleeditor/dialog-style-editor.ui.h:1
-msgid "Subtitle Editor - Style Editor"
-msgstr "Subtitle Editor - Estilo editorea"
+msgid "Subtitle Editor — Style Editor"
+msgstr "Subtitle Editor — Estilo editorea"
 
 #: ../plugins/actions/styleeditor/dialog-style-editor.ui.h:2
 msgid "Font"
@@ -2700,20 +2700,20 @@ msgid "_Typewriter"
 msgstr "_Idazmakina"
 
 #: ../plugins/actions/typewriter/typewriter.cc:47
-msgid "Characters - Linear"
-msgstr "Karaktereak - linearra"
+msgid "Characters — Linear"
+msgstr "Karaktereak — linearra"
 
 #: ../plugins/actions/typewriter/typewriter.cc:54
-msgid "Characters - Random"
-msgstr "Karaktereak - ausazkoa"
+msgid "Characters — Random"
+msgstr "Karaktereak — ausazkoa"
 
 #: ../plugins/actions/typewriter/typewriter.cc:60
-msgid "Words - Linear"
-msgstr "Hitzak - linearra"
+msgid "Words — Linear"
+msgstr "Hitzak — linearra"
 
 #: ../plugins/actions/typewriter/typewriter.cc:66
-msgid "Words - Random"
-msgstr "Hitzak - Ausazkoa"
+msgid "Words — Random"
+msgstr "Hitzak — Ausazkoa"
 
 #. Already create in MenuBar.cc
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:45
@@ -3554,8 +3554,8 @@ msgid "Couldn't get the keyframe size on the file."
 msgstr "Ezin izan da eskuratu fitxategiko gako-fotogramaren neurria."
 
 #: ../src/main.cc:59
-msgid " - edit subtitles files"
-msgstr " - editatu azpitituluen fitxategiak"
+msgid " — edit subtitles files"
+msgstr " — editatu azpitituluen fitxategiak"
 
 #: ../src/options.cc:35
 msgid "[FILE...]"
