--- a/po/nl.po
+++ b/po/nl.po
@@ -1948,24 +1948,24 @@ msgid "Autodetect"
 msgstr "Automatisch vaststellen"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:103
-msgid "Pulse - PulseAudio Sound Server"
+msgid "Pulse — PulseAudio Sound Server"
 msgstr ""
 
 #: ../plugins/actions/preferences/videoplayerpage.h:106
-msgid "ALSA - Advanced Linux Sound Architecture"
+msgid "ALSA — Advanced Linux Sound Architecture"
 msgstr ""
 
 #: ../plugins/actions/preferences/videoplayerpage.h:107
-msgid "ESD - Enlightenment Sound Daemon"
+msgid "ESD — Enlightenment Sound Daemon"
 msgstr ""
 
 #: ../plugins/actions/preferences/videoplayerpage.h:109
-msgid "OSS - Open Sound System"
+msgid "OSS — Open Sound System"
 msgstr ""
 
 #: ../plugins/actions/preferences/videoplayerpage.h:110
 #: ../plugins/actions/preferences/videoplayerpage.h:127
-msgid "SDL - Simple DirectMedia Layer"
+msgid "SDL — Simple DirectMedia Layer"
 msgstr ""
 
 #: ../plugins/actions/preferences/videoplayerpage.h:112
@@ -2415,8 +2415,8 @@ msgid "Stack Subtitles only works on a continuous selection."
 msgstr ""
 
 #: ../plugins/actions/styleeditor/dialog-style-editor.ui.h:1
-msgid "Subtitle Editor - Style Editor"
-msgstr "Subtitle Editor - Stijl bewerken"
+msgid "Subtitle Editor — Style Editor"
+msgstr "Subtitle Editor — Stijl bewerken"
 
 #: ../plugins/actions/styleeditor/dialog-style-editor.ui.h:2
 #, fuzzy
@@ -2853,20 +2853,20 @@ msgstr ""
 
 #: ../plugins/actions/typewriter/typewriter.cc:47
 #, fuzzy
-msgid "Characters - Linear"
+msgid "Characters — Linear"
 msgstr "Tekenset:"
 
 #: ../plugins/actions/typewriter/typewriter.cc:54
 #, fuzzy
-msgid "Characters - Random"
+msgid "Characters — Random"
 msgstr "Tekens per regel"
 
 #: ../plugins/actions/typewriter/typewriter.cc:60
-msgid "Words - Linear"
+msgid "Words — Linear"
 msgstr ""
 
 #: ../plugins/actions/typewriter/typewriter.cc:66
-msgid "Words - Random"
+msgid "Words — Random"
 msgstr ""
 
 #. Already create in MenuBar.cc
@@ -3761,7 +3761,7 @@ msgid "Couldn't get the keyframe size on the file."
 msgstr ""
 
 #: ../src/main.cc:59
-msgid " - edit subtitles files"
+msgid " — edit subtitles files"
 msgstr ""
 
 #: ../src/options.cc:35
@@ -4670,7 +4670,7 @@ msgstr "subtitle editor"
 #: ../plugins/subtitleformats/subtitleeditorproject/subtitleeditorproject.se-plugin.in.h:2
 #, fuzzy
 msgid "Subtitle Editor Project subtitles support."
-msgstr "Subtitle Editor - Stijl bewerken"
+msgstr "Subtitle Editor — Stijl bewerken"
 
 #: ../plugins/subtitleformats/subviewer2/subviewer2.se-plugin.in.h:1
 msgid "SubViewer2"
