--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1879,25 +1879,25 @@ msgid "Autodetect"
 msgstr "Detecção automática"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:103
-msgid "Pulse - PulseAudio Sound Server"
-msgstr "Pulse - Servidor de Som PulseAudio"
+msgid "Pulse — PulseAudio Sound Server"
+msgstr "Pulse — Servidor de Som PulseAudio"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:106
-msgid "ALSA - Advanced Linux Sound Architecture"
-msgstr "ALSA - Advanced Linux Sound Architecture"
+msgid "ALSA — Advanced Linux Sound Architecture"
+msgstr "ALSA — Advanced Linux Sound Architecture"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:107
-msgid "ESD - Enlightenment Sound Daemon"
-msgstr "ESD - Enlightenment Sound Daemon"
+msgid "ESD — Enlightenment Sound Daemon"
+msgstr "ESD — Enlightenment Sound Daemon"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:109
-msgid "OSS - Open Sound System"
-msgstr "OSS - Open Sound System"
+msgid "OSS — Open Sound System"
+msgstr "OSS — Open Sound System"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:110
 #: ../plugins/actions/preferences/videoplayerpage.h:127
-msgid "SDL - Simple DirectMedia Layer"
-msgstr "SDL - Simple DirectMedia Layer"
+msgid "SDL — Simple DirectMedia Layer"
+msgstr "SDL — Simple DirectMedia Layer"
 
 #: ../plugins/actions/preferences/videoplayerpage.h:112
 #: ../plugins/actions/preferences/videoplayerpage.h:129
@@ -2306,8 +2306,8 @@ msgid "Stack Subtitles only works on a continuous selection."
 msgstr "A aproximação de legendas apenas funciona em seleções contínuas."
 
 #: ../plugins/actions/styleeditor/dialog-style-editor.ui.h:1
-msgid "Subtitle Editor - Style Editor"
-msgstr "Editor de Legendas - Editor de Estilos"
+msgid "Subtitle Editor — Style Editor"
+msgstr "Editor de Legendas — Editor de Estilos"
 
 #: ../plugins/actions/styleeditor/dialog-style-editor.ui.h:2
 msgid "Font"
@@ -2726,20 +2726,20 @@ msgid "_Typewriter"
 msgstr "_Datilografia"
 
 #: ../plugins/actions/typewriter/typewriter.cc:47
-msgid "Characters - Linear"
-msgstr "Caracteres - Linear"
+msgid "Characters — Linear"
+msgstr "Caracteres — Linear"
 
 #: ../plugins/actions/typewriter/typewriter.cc:54
-msgid "Characters - Random"
-msgstr "Caracteres - Aleatório"
+msgid "Characters — Random"
+msgstr "Caracteres — Aleatório"
 
 #: ../plugins/actions/typewriter/typewriter.cc:60
-msgid "Words - Linear"
-msgstr "Palavras - Linear"
+msgid "Words — Linear"
+msgstr "Palavras — Linear"
 
 #: ../plugins/actions/typewriter/typewriter.cc:66
-msgid "Words - Random"
-msgstr "Palavras - Aleatório"
+msgid "Words — Random"
+msgstr "Palavras — Aleatório"
 
 #. Already create in MenuBar.cc
 #: ../plugins/actions/videoplayermanagement/videoplayermanagement.cc:45
@@ -3592,8 +3592,8 @@ msgid "Couldn't get the keyframe size on the file."
 msgstr "Não foi possível obter o tamanho do keyframe no arquivo."
 
 #: ../src/main.cc:59
-msgid " - edit subtitles files"
-msgstr " - editar arquivos de legendas"
+msgid " — edit subtitles files"
+msgstr " — editar arquivos de legendas"
 
 #: ../src/options.cc:35
 msgid "[FILE...]"
