Debugging: enable profiling by default in debug and debug code cleanup
This also makes debug-help show when --help-all is called or --help-debug, not cluttering the normal help view. Also refactored the code a bit to avoid duplication, added descriptions etc.

--- a/docs/subtitleeditor.1
+++ b/docs/subtitleeditor.1
@@ -50,6 +50,11 @@ Show summary of options.
 Show all help options.
 .RE
 .PP
+\fB\-\-help\-debug\fR
+.RS 3n
+Show debug options if debug support was compiled in.
+.RE
+.PP
 \fB\-\-help\-gst\fR
 .RS 3n
 Show GStreamer options.
